2012-12-18  Dirk Pranke  <dpranke@chromium.org>

        [chromium] pull in the CDM module recently added to media
        https://bugs.webkit.org/show_bug.cgi?id=105360

        Unreiviewed build fix, but sanity checked by ddorwin.

        * DEPS:

2012-12-18  Dean Jackson  <dino@apple.com>

        Unreviewed attempted build fix for Chromium.

        Insert stub methods for localized text track menu labels.

        * src/LocalizedStrings.cpp:
        (WebCore):
        (WebCore::textTrackClosedCaptionsText):
        (WebCore::textTrackSubtitlesText):
        (WebCore::textTrackOffText):
        (WebCore::textTrackNoLabelText):

2012-12-18  Dirk Pranke  <dpranke@chromium.org>

        Pull in the opus codec sources.

        Unreviewed, build fix.

        * DEPS:

2012-12-18  Dirk Pranke  <dpranke@chromium.org>

        Unreviewed, roll chromium deps to r173769

        * DEPS:

2012-12-18  Dominic Mazzoni  <dmazzoni@google.com>

        AX: support clickPoint in DRT for chromium
        https://bugs.webkit.org/show_bug.cgi?id=97359

        Reviewed by Chris Fleizach.

        Exposes the clickPoint accessibility method in WebAccessibilityObject.

        * public/WebAccessibilityObject.h:
        (WebAccessibilityObject):
        * src/WebAccessibilityObject.cpp:
        (WebKit::WebAccessibilityObject::clickPoint):
        (WebKit):

2012-12-18  Wei Jia  <wjia@chromium.org>

        Enable media stream on Android for Chromium
        https://bugs.webkit.org/show_bug.cgi?id=102545

        Reviewed by Eric Seidel.

        Put all webrtc related stuff under one flag "enable_webrtc" which is set to 1
        on Linux/Windows/Mac and 0 on Android.

        * features.gypi:

2012-12-18  Yaron Friedman  <yfriedman@chromium.org>

        Chrome Android java output is too verbose
        https://bugs.webkit.org/show_bug.cgi?id=105247

        Reviewed by Tony Chang.

        Pass -quiet to ant to suppress extraneous output.

        * WebKitUnitTests.gyp:
